--- a/resources/assets/sass/_alert.scss
+++ b/resources/assets/sass/_alert.scss
@@ -120,8 +120,9 @@
   background-color: #F9F9F9;
   border-radius: unset;
   border: 1px solid #D6D6D6;
-  padding: 20px 45px;
+  padding: 20px 45px 20px 35px;
   font-size: 16px;
+  overflow: hidden;
 
   .action-text-left {
     span {
@@ -130,12 +131,20 @@
 
     .action-text {
       line-height: 22px;
+      padding-right: 30px;
     }
   }
 
   .btn-action {
-    min-width: 175px;
-    min-height: 40px;
+    min-width: 155px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    .float-right,
+    .btn-action {
+      width: 100%;
+      display: block;
+    }
   }
 
   button.close {
@@ -143,6 +152,9 @@
     right: 0;
     top: 0;
     bottom: 0;
+    margin: auto 1.25rem;
+    height: 20px;
+    padding: 0px;
 
     span {
       color: #adadad;
